fixed textarea scroll behavior on mobiles

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -30,3 +30,7 @@ input[type="number"]::-webkit-inner-spin-button {
   z-index: -10;
   padding-top: 10px;
 }
+
+html {
+  scroll-padding-bottom: 10rem; /* Adjust to offset the field */
+}
